[tool.poetry]
name = "squest"
version = "2.5.2"
description = "Service catalog on top of Red Hat Ansible Automation Platform(RHAAP)/AWX (formerly known as Ansible Tower)"
authors = ["Nicolas Marcq <nicolas.marcq@hpe.com>", "Elias Boulharts <elias.boulharts@hpe.com", "Anthony Belhadj <abelhadj@hpe.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.5"
djangorestframework = "^3.14.0"
mysqlclient = "^2.2.0"
PyYAML = "^6.0.1"
celery = "^5.3.4"
django-celery-results = "^2.4.0"
towerlib = "^3.14.0"
Pillow = "^10.0.1"
django-fsm = "^2.8.1"
django-celery-beat = "^2.5.0"
Pygments = "^2.16.1"
django-filter = "^23.3"
coverage = "^7.3.1"
django-auth-ldap = "^4.5.0"
django-node-assets = "^0.9.13"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.2"
pymdown-extensions = "^10.3"
drf-yasg = "^1.21.7"
graphviz = "^0.20.1"
django-taggit = "^4.0.0"
mike = "^1.1.2"
martor = "^1.6.28"
django-tempus-dominus = "^5.1.2.17"
gunicorn = "^21.2.0"
django-tables2 = "^2.6.0"
django-dbbackup = "^4.0.2"
django-cleanup = "^8.0.0"
GitPython = "^3.1.37"
prometheus-client = "^0.17.1"
redis = "^5.0.1"
django-cachalot = "^2.6.1"
django-mysql = "^4.11.0"
django-formtools = "^2.4.1"
tablib = "^3.5.0"
setuptools = "^68.2.2"
hiredis = "^2.2.3"
psycopg = "^3.1.12"
social-auth-app-django = {extras = ["openidconnect"], version = "^5.4.0"}
python-jose = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
