[tool.poetry]
name = "squest"
version = "2.8.1b"
description = "Service catalog on top of Red Hat Ansible Automation Platform(RHAAP)/AWX (formerly known as Ansible Tower)"
authors = ["Nicolas Marcq <nicolas.marcq@hpe.com>", "Elias Boulharts <elias.boulharts@hpe.com", "Anthony Belhadj <abelhadj@hpe.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.0.0"
djangorestframework = "^3.0.0"
mysqlclient = "2.2.7"
PyYAML = "6.0.2"
celery = "5.5.2"
django-celery-results = "2.6.0"
towerlib = "3.15.0"
Pillow = "10.3.0"
django-fsm = "2.8.2"
django-celery-beat = "2.6.0"
Pygments = "2.18.0"
django-filter = "23.5"
coverage = "7.5.1"
django-auth-ldap = "4.8.0"
django-node-assets = "0.9.13"
mkdocs = "1.6.0"
mkdocs-material = "9.5.22"
pymdown-extensions = "10.3"
drf-yasg = "1.21.7"
graphviz = "0.20.3"
django-taggit = "5.0.1"
mike = "2.1.1"
martor = "^1.6.44"
django-tempus-dominus = "5.1.2.17"
gunicorn = "23.0.0"
django-tables2 = "2.7.0"
django-dbbackup = "4.1.0"
django-cleanup = "8.1.0"
GitPython = "3.1.43"
prometheus-client = "0.20.0"
redis = "5.0.4"
django-cachalot = "2.6.2"
django-mysql = "4.13.0"
django-formtools = "2.5.1"
tablib = "3.6.1"
setuptools = "70.0.0"
hiredis = "2.3.2"
psycopg = {version = "3.1.19", extras = ["binary"]}
social-auth-app-django = {extras = ["openidconnect"], version = "5.4.1"}
python-jose = "3.4.0"

[tool.poetry.group.test.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
